feat(race details): add race results tables
- add table for final race results
- add table for race qualifying results
- add table for driver standings after a race
- add details for finishing status of cars

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.alert {
+    background-color: #f8d7da;
+    border: 1px solid #f1aeb5;
+    color: #58151c;
+}
