--- a/src/app/race-details/qualifying-results/qualifying-results.component.html
+++ b/src/app/race-details/qualifying-results/qualifying-results.component.html
@@ -1,3 +1,8 @@
+
+<mat-progress-bar *ngIf="loading$ | ngrxPush"></mat-progress-bar>
+<div *ngIf="error$ | ngrxPush as error" class="alert">
+    An error occurred: {{ error }}
+</div>
 <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="Q1">
         <th mat-header-cell *matHeaderCellDef>Q1</th>
